[package]
name = "rrai-desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["api-all", "macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#result
thiserror = "1.0.40"
anyhow = "1.0"

# logger
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing = "0.1.15"

bytes = "1.1.0"
lazy_static = "1.4.0"
futures = "0.3"


nix = "0.26.2"
window-shadows = "0.2.1"
rusqlite = "0.29.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
