[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
license = ""
name = "rrai-desktop"
repository = ""
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = {version = "1.2", features = ["api-all", "macos-private-api", "process-command-api", "updater"] }

#result
anyhow = "1.0"
thiserror = "1.0.40"

# logger
tracing = "0.1.15"
tracing-subscriber = {version = "0.3", features = ["fmt"] }

bytes = "1.1.0"
futures = "0.3"
lazy_static = "1.4.0"

home = "0.5.4"
nix = "0.26.2"
rusqlite = {version = "0.29.0", features = ["bundled"] }
window-shadows = "0.2.1"
rocket = "0.4.11"
async-trait = "0.1.68"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
