[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
license = ""
name = "rrai-desktop"
repository = ""
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.3", features = ["api-all", "macos-private-api", "process-command-api", "updater"] }

#result
anyhow = "1.0"
thiserror = "1.0.40"

# logger
tracing = "0.1.15"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

bytes = "1.1.0"
futures = "0.3"
lazy_static = "1.4.0"

async-trait = "0.1.68"
home = "0.5.4"
nix = "0.26.2"
window-shadows = "0.2.1"

url = "2.3.1"

# rrai-desktop-sdk = {version = "*", git = "https://www.github.com/rrkeji/rrai-desktop-sdk", branch = "master"}
rrai-desktop-sdk = { version = "*", path = "../../rrai-desktop-sdk" }
# 

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
